Add user manager of technician module

--- a/pages/technician/reanalysisTaskDetails.html
+++ b/pages/technician/reanalysisTaskDetails.html
@@ -97,6 +97,7 @@
                                 <li><a href="finishedTaskManage.html">已完成任务</a></li>
                             </ul>
                         </li>
+                        <li><a href="setting.html">系统设置</a></li>
                     </ul>
                 </div>
             </div>
