--- a/pages/technician/analysisTaskDetails.html
+++ b/pages/technician/analysisTaskDetails.html
@@ -111,6 +111,7 @@
                                 <li><a href="finishedTaskManage.html">已完成任务</a></li>
                             </ul>
                         </li>
+                        <li><a href="setting.html">系统设置</a></li>
                     </ul>
                 </div>
             </div>
