--- a/pages/doctor/setting.html
+++ b/pages/doctor/setting.html
@@ -17,6 +17,11 @@
 
         <link rel="stylesheet" href="../../static/css/frame.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -84,32 +89,7 @@
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#task-drop">
-                                <span>任务管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="task-drop" class="collapse">
-                                <li><a href="uncheckTaskManage.html">待审核任务<span class="badge pull-right">5</span></a></li>
-                                <li><a href="">所有任务</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#consultation-drop">
-                                <span>会诊管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="consultation-drop" class="collapse">
-                                <li><a href="initConsultManage.html">发起的会诊</a></li>
-                                <li><a href="joinConsultManage.html">参加的会诊</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="techManage.html">我的技师</a></li>
-                        <li class="active"><a href="setting.html">系统设置</a></li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -170,6 +150,9 @@
         <!-- DataTables -->
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/doctor/menuTree.js"></script>
 
         <script src="../../static/js/doctor/setting.js"></script>
     </body>
