--- a/pages/partner/EditDoctor.html
+++ b/pages/partner/EditDoctor.html
@@ -17,6 +17,11 @@
 
         <link rel="stylesheet" href="../../static/css/frame.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -84,27 +89,7 @@
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#team-drop">
-                                <span>医生团队管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="team-drop" class="">
-                                <li class="active"><a href="doctorManage.html">医生管理</a></li>
-                                <li><a href="technicianManage.html">技师管理</a></li>
-                                <li><a href="teamManage.html">团队管理</a></li>
-                            </ul>
-                        </li>
-                        <li class="">
-                            <a href="contractManage.html">契约管理</a>
-                        </li>
-                        <li class="">
-                            <a href="checklistManage.html">检查单管理</a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -285,6 +270,9 @@
         <!-- DataTables -->
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/partner/menuTree.js"></script>
 
         <script src="../../static/js/partner/EditDoctor.js"></script>
     </body>
