--- a/pages/doctor/addConsult.html
+++ b/pages/doctor/addConsult.html
@@ -15,6 +15,11 @@
 
         <link rel="stylesheet" href="../../static/css/frame.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -82,32 +87,7 @@
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#task-drop">
-                                <span>任务管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="task-drop" class="collapse">
-                                <li><a href="uncheckTaskManage.html">待审核任务</a></li>
-                                <li><a href="">所有任务</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#consultation-drop">
-                                <span>会诊管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="consultation-drop" class="">
-                                <li class="active"><a href="initConsultManage.html">发起的会诊</a></li>
-                                <li><a href="joinConsultManage.html">参加的会诊</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="techManage.html">我的技师</a></li>
-                        <li><a href="setting.html">系统设置</a></li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -227,6 +207,10 @@
         <script src="../../lib/jquery-ui-1.11.4/jquery-ui.min.js"></script>
         <!-- jQuery multiselect plugin with two sides -->
         <script src="../../lib/jquery-multiselect/multiselect.min.js"></script>
+
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/doctor/menuTree.js"></script>
 
         <script src="../../static/js/doctor/addConsult.js"></script>
     </body>
