--- a/pages/hospital/AddPatient.html
+++ b/pages/hospital/AddPatient.html
@@ -16,6 +16,11 @@
         <link rel="stylesheet" href="../../static/css/frame.css">
         <link rel="stylesheet" href="../../static/css/hospital/addPatient.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -77,39 +82,13 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="message-preview">
-                                        <a href="#" class="menu-link">
-                                            <div class="media">
-                                                <span class="pull-left">
-                                                    <img src="../../static/img/placeholder_50.png" alt="" class="media-oject">
-                                                </span>
-                                                <div class="media-body">
-                                                    <h5 class="media-heading"><strong>John Smith</strong></h5>
-                                                    <p class="small text-muted"><i class="glyphicon glyphicon-time"></i> Yesterday at 4:32 PM</p>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </li>
                                 </ul>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="uploadFile.html">上传数据</a>
-                        </li>
-                        <li>
-                            <a href="checklistManage.html">检查单管理</a>
-                        </li>
-                        <li class="active">
-                            <a href="patientManage.html">病人管理</a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -216,6 +195,10 @@
         <script src="../../lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
         <!-- jQuery UI -->
         <script src="../../lib/jquery-ui-1.11.4/jquery-ui.min.js"></script>
+
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/hospital/menuTree.js"></script>
 
         <script src="../../static/js/hospital/addPatient.js"></script>
     </body>
