--- a/pages/partner/EditContract.html
+++ b/pages/partner/EditContract.html
@@ -19,6 +19,11 @@
 
         <link rel="stylesheet" href="../../static/css/frame.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -86,27 +91,7 @@
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#team-drop">
-                                <span>医生团队管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="team-drop" class="collapse">
-                                <li class=""><a href="doctorManage.html">医生管理</a></li>
-                                <li><a href="technicianManage.html">技师管理</a></li>
-                                <li><a href="teamManage.html">团队管理</a></li>
-                            </ul>
-                        </li>
-                        <li class="active">
-                            <a href="contractManage.html">契约管理</a>
-                        </li>
-                        <li class="">
-                            <a href="checklistManage.html">检查单管理</a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -242,6 +227,9 @@
         <!-- Bootstrap-Datetimepick -->
         <script src="../../lib/bootstrap-datetimepicker/moment/moment.js"></script>
         <script src="../../lib/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/partner/menuTree.js"></script>
 
         <script src="../../static/js/partner/EditContract.js"></script>
     </body>
