--- a/pages/technician/setting.html
+++ b/pages/technician/setting.html
@@ -18,6 +18,11 @@
         <link rel="stylesheet" href="../../static/css/frame.css">
         <link rel="stylesheet" href="../../static/css/technician/reanalysisTaskManage.css">
 
+        <!-- ReactJS -->
+        <script src="../../lib/React/react.min.js"></script>
+        <script src="../../lib/React/react-dom.js"></script>
+        <script src="../../lib/React/babel-browser.min.js"></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
         <!-- [if lt IE 9]>
@@ -99,23 +104,7 @@
                     </ul>
                 </div>
                 <!-- Sidebar Menu Items -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
-                    <ul class="nav side-nav">
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="collapse" data-target="#task-drop">
-                                <span>任务管理</span>
-                                <span class="caret"></span>
-                            </a>
-                            <ul id="task-drop" class="collapse">
-                                <li><a href="unoccupiedTaskManage.html">可接任务</a></li>
-                                <li><a href="occupiedTaskManage.html">已接任务</a></li>
-                                <li><a href="reanalysisTaskManage.html">重分析任务</a></li>
-                                <li><a href="finishedTaskManage.html">已完成任务</a></li>
-                            </ul>
-                        </li>
-                        <li class="active"><a href="setting.html">系统设置</a></li>
-                    </ul>
-                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse" id="menu"></div>
             </div>
         </div>
         <div class="row main-page">
@@ -176,6 +165,9 @@
         <!-- DataTables -->
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
+        <!-- MenuTree React Plugin -->
+        <script src="../../static/plugin/MenuTree.js"></script>
+        <script src="../../static/js/technician/menuTree.js"></script>
 
         <script src="../../static/js/technician/setting.js"></script>
     </body>
